# embedded-fan-control

./: .gitignore  .gitmodules  Cargo.toml  README.md
debug-listener/: Cargo.toml
debug-listener/src/: main.rs
exponential_distribution/: Cargo.toml
exponential_distribution/src/: main.rs
fan-controller/: .gitignore  Cargo.toml  README.md  build.rs  discovery_payload.json  documentation.md  fan state management components.excalidraw
fan-controller/.cargo/: config.toml
fan-controller/src/: async_callback.rs  configuration.rs  debounce.rs  encoding.rs  event_bus.rs  fan.rs  main.rs  modbus.rs  mqtt.rs  mqtt_task.rs  storage.rs  string_buffer.rs  task.rs  wifi.rs
fan-controller/src/dhcp/: mod.rs
fan-controller/src/fan/: mod.rs  set_point.rs
fan-controller/src/modbus/: client.rs  device.rs  mod.rs  register.rs
fan-controller/src/modbus/function/: code.rs  mod.rs  read_input_register.rs  write_holding_register.rs
fan-controller/src/mqtt/: client.rs  connect.rs  connect_acknowledgement.rs  mod.rs  packet.rs  ping_request.rs  publish.rs  subscribe.rs  subscribe_acknowledgement.rs  task.rs  variable_byte_integer.rs
fan-controller/src/mqtt/packet/: connect.rs  connect_acknowledgement.rs  disconnect.rs  mod.rs  ping_request.rs  ping_response.rs  publish.rs  subscribe.rs  subscribe_acknowledgement.rs
fan-controller/src/mqtt/v2/: mod.rs  packet.rs  publish.rs
home_assistant_discovery/: Cargo.toml
home_assistant_discovery/src/: lib.rs
home_assistant_discovery/src/snapshots/: home_assistant_discovery__tests__serialize_custom_example.snap  home_assistant_discovery__tests__serialize_home_assistant_example.snap
mqtt/: Cargo.toml  README.md
mqtt/src/: lib.rs  main.rs  packet.rs  variable_byte_integer.rs
src/: fan.rs  main.rs
topic/: Cargo.toml  README.md
topic/src/: lib.rs
