[package]
name = "pico-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
cyw43-pio = "0.1.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = "0.5.0"
embassy-rp = "0.1.0"
embassy-time = "0.3.1"
panic-probe = "0.3.2"
static_cell = "2"

[profile.release]
debug = 2
