[package]
name = "fan-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
crc = "3.2.1"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
ekv = { version = "1.0.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "dns", "udp"] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
# Note: embassy-sync is patched at the workspace root level Cargo.toml because we need watch from newer versions but ekv
# does not work with the latest version so wee need to trick it
# Patch only works at the workspace root level Cargo.toml
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", features = ["defmt"] }
embedded-io-async = "0.6.1"
embedded-nal-async = "0.7.1"
embedded-storage = "0.3.1"
heapless = "0.8.0"
nb = "1.1.0"
panic-probe = "0.3.2"
portable-atomic = { version = "1.7", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }
reqwless = { version = "0.12.1", features = ["defmt"] }
smoltcp = { version = "0.11.0", default-features = false }
static_cell = "2"
thiserror = { version = "2.0.3", default-features = false }

[profile.release]
debug = 2
