[package]
name = "fan-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
crc = "3.2.1"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
defmt = { workspace = true }
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "dns",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
# Have to use git dependency because the watch module is not in the version on crates.io
# The rev commmit hash is just the latest commit on the main branch at the time of when this was added
# embassy-sync = "0.6.0"
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-time = { version = "0.3.1", features = ["defmt"] }
embedded-io-async = "0.6.1"
embedded-nal-async = "0.7.1"
heapless = "0.8.0"
mqtt = { version = "0.1.0", path = "../mqtt", features = ["defmt"] }
nb = "1.1.0"
panic-probe = "0.3.2"
portable-atomic = { version = "1.7", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }
reqwless = { version = "0.12.1", features = ["defmt"] }
static_cell = "2"
topic = { version = "0.1.0", path = "../topic" }

[profile.release]
debug = 2

[build-dependencies]
dotenvy = "0.15.7"
mqtt = { version = "0.1.0", path = "../mqtt", features = ["serde"] }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", version = "0.0.0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev = "9bee8376a17401f9736b45fdefffb62edc2f1668", version = "0.0.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
topic = { version = "0.1.0", path = "../topic" }
